<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="qty">QUANTITY</string>
    <string name="quantity_value">0</string>
    <string name="order_btn_text">ORDER</string>
    <string name="price_label">Price</string>
    <string name="price_val">$0</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="dec_symbol">_</string>
    <string name="qty_value">1</string>
    <string name="inc_symbol">+</string>
    <string name="order_summary">order Summary</string>
    <string name="inc_bound_warning">You can\'t order more than 100 cup</string>
    <string name="dec_bound_warning">You can\'t order less than 1 cup</string>
    <string name="name_label">Name: </string>
    <string name="whip_cream">\"Add Whipped Cream: \"</string>
    <string name="add_choc">\"Add chocolate: \"</string>
    <string name="quantity">\"Quantity: \"</string>
    <string name="total">\"Total: \"</string>
    <string name="thank_you">Thank You!</string>
</resources>
